--- a/templates/XA.html
+++ b/templates/XA.html
@@ -36,7 +36,7 @@
         </ul>
     </div>
     <section>
-        <div class="flex justify-center items-center h-screen">
+        <div class="flex justify-center items-center h-screen" id="control">
             <div class="xl:w-1/3 lg:w-[60%] md:w-[80%] w-[90%] bg-blue-100 rounded p-5">
                 <header class="py-2">
                     <h2 class="text-blue-500 text-3xl text-center font-bold">Login</h2>
