--- a/templates/XA.html
+++ b/templates/XA.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StudyMate</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="static\style.css">
+    <title>Login - Student Web</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="{{ url_for('static', filename='secert.js') }}"></script>
+    <script src="https://kit.fontawesome.com/a7ad42ee25.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
+
+<body class="bg-gray-100">
     <div class="area h-screen">
-        <ul class="circles h-full">
-            <li></li>
-            <li></li>
+        <ul class="circles h-screen">
             <li></li>
             <li></li>
             <li></li>
@@ -35,41 +31,33 @@
             <li></li>
         </ul>
     </div>
-    <section>
-        <div class="flex justify-center items-center h-screen" id="control">
-            <div class="xl:w-1/3 lg:w-[60%] md:w-[80%] w-[90%] bg-blue-100 rounded p-5">
-                <header class="py-2">
-                    <h2 class="text-blue-500 text-3xl text-center font-bold">Login</h2>
-                </header>
-                <form method="POST" id="loginForm">
-                    <div>
-                        <label class="block mb-2 text-blue-500" for="username">Username</label>
-                        <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
-                            type="text" name="username" id="username" required>
-                    </div>
-                    <div>
-                        <label class="block mb-2 text-blue-500" for="password">Password</label>
-                        <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
-                            type="password" name="password" id="password" required>
-                    </div>
-                    <div>
-                        <button
-                            class="w-full bg-blue-700 hover:bg-pink-700 text-white font-bold py-2 px-4 mb-6 rounded"
-                            type="button" id="submitButton" onclick="login()">Login</button>
-                    </div>
-                </form>
-            </div>
+    <div class="flex justify-center items-center h-screen">
+        <div class="xl:w-1/3 lg:w-[60%] md:w-[80%] w-[90%] bg-blue-100 rounded p-5">
+            <header class="py-2">
+                <h2 class="text-blue-500 text-3xl text-center font-bold">Login</h2>
+            </header>
+            <form method="POST" action="{{ url_for('XA') }}">
+                <div>
+                    <label class="block mb-2 text-blue-500" for="username">Username</label>
+                    <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
+                        type="text" name="username" required>
+                </div>
+                <div>
+                    <label class="block mb-2 text-blue-500" for="password">Password</label>
+                    <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
+                        type="password" name="password" required>
+                </div>
+                <div>
+                    <button
+                        class="w-full bg-blue-700 hover:bg-pink-700 text-white font-bold py-2 px-4 mb-6 rounded"
+                        type="submit">Login</button>
+                </div>
+            </form>
+            <footer>
+                <a class="text-blue-700 hover:text-pink-700 text-sm float-left" href="/forgot">Forgot Password?</a>
+                <a class="text-blue-700 hover:text-pink-700 text-sm float-right" href="/register">Create Account</a>
+            </footer>
         </div>
-        <div class="m-auto flex flex-col lg:flex-row justify-center items-center gap-6 pt-12">
-            <button id="UnitTestBtn" onclick="toggleUnitTest()"
-            class="bg-white py-12  lg:w-[30%] w-[70%] text-xl hover:bg-blue-500 hover:text-white ease-in-out rounded-lg">
-            <h1>Open Unit test marks entering Portal</h1>
-            </button>
-            <button id="UnitTestBtn" onclick="toggleUnitTest()"
-            class="bg-white py-12  lg:w-[30%] w-[70%] text-xl hover:bg-blue-500 hover:text-white ease-in-out rounded-lg">
-            <h1>disable Unit test marks entering Portal</h1>
-            </button>
-        </div>
-    </section>
+    </div>
 </body>
 </html>
