--- a/templates/unit.html
+++ b/templates/unit.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Unit Test Portal</title>
-    <style>
-        .hidden {
-            display: none;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Student Web</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/a7ad42ee25.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
-    <h1>Unit Test Portal</h1>
-    <div id="unitTest" class="{{ 'hidden' if not unit_test_result else '' }}">
-        <!-- Content for unit test entry form -->
-        <p>Enter marks here...</p>
+<body class="bg-gray-100">
+    <div class="area h-screen">
+        <ul class="circles h-screen">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+    <div>
+        {% if button == 1 %}
+            <p>open</p>
+        {% else %}
+            <p>close</p>
+        {% endif %}
     </div>
 </body>
 </html>
